Mon Jul  7 00:22:35 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix multithreaded dice generation and logfiles

Mon Jul  7 00:20:52 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: print prompt and answer for automatic questions

Sun Jul  6 00:00:22 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* format.c: correct minor error introduced by translational changes

Wed Jul  2 00:01:04 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubg.c, gtkfile.c, gtkoptions.c,
	import.c, play.c, set.c, sgf.c, show.c: fix minor problems with the
	batch analyse function and add an option for setting default answers
	to yes/no questions.

Mon Jun 30 23:12:09 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, analysis.c, backgammon.h, bearoff.c, configure.in,
	dbprovider.c, dice.c, drawboard.c, eval.c, export.c, external.c,
	file.c, format.c, formatgs.c, gnubg.c, gtkgame.c, gtkmovefilter.c,
	gtkoptions.c, util.c, pixmaps/Makefile.am, po/cs.po, po/da.po,
	po/de.po, po/en_US.po, po/fr.po, po/gnubg.pot, po/is.po, po/it.po,
	po/ja.po, po/ru.po, po/tr.po, po/gnubg-langs/__catstatus.php,
	mkinstalldirs, po/LINGUAS: fix minor translation problems and update
	the pot/po files to use glib macros
	* gnubgi18n.c, gnubgi18n.h: removed as similar functions are provided by
	glib/gettext

Mon Jun 30 19:38:38 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* po/* m4/*, configure.in: modify gettext and friends to use glib
	gettext macros

Sun Jun 29 21:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* analysis.c - gnubg.c: First part of translation string cleanup

Tue Jun 24 01:06:38 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* formatgs.c: make 95% ci interval an interval rather than a number

Thu Jun 19 22:00:38 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* ChangeLog, Makefile.am, configure.in, gnubgstock.c, gnubgstock.h,
	gtkgame.c, gtktoolbar.c, pixmaps/.cvsignore, pixmaps/Makefile.am,